# ChangeLog for x11-libs/pango
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.329 2011/10/19 01:59:34 tetromino Exp $

*pango-1.29.4 (19 Oct 2011)

  19 Oct 2011; Alexandre Rostovtsev <tetromino@gentoo.org>
  +pango-1.29.4.ebuild:
  Add pango-1.29.4 (supposedly stable-ish, despite the odd minor version) from
  the gnome overlay. Includes fix for bug #384671 (pango-querymodules usage
  when
  ROOT != /), thanks to vapier.

  Notable changes: introspection improvements.

  11 Jul 2011; Matt Turner <mattst88@gentoo.org> pango-1.28.4.ebuild:
  Added ~mips, bug 364693

  09 Jul 2011; Raúl Porcel <armin76@gentoo.org> pango-1.28.4.ebuild:
  alpha/arm/ia64/sh/sparc stable wrt #371320

  06 Jul 2011; Mark Loeser <halcy0n@gentoo.org> pango-1.28.4.ebuild:
  Stable for ppc64; bug #371320

  29 Jun 2011; Christoph Mende <angelos@gentoo.org> pango-1.28.4.ebuild:
  Stable on amd64 wrt bug #371320

  29 Jun 2011; Jeroen Roovers <jer@gentoo.org> pango-1.28.4.ebuild:
  Stable for HPPA (bug #371320).

  28 Jun 2011; Brent Baude <ranger@gentoo.org> pango-1.28.4.ebuild:
  Marking pango-1.28.4 ppc stable for bug 371320

  22 Jun 2011; Fabian Groffen <grobian@gentoo.org> pango-1.28.4.ebuild:
  Marked ~x64-macos, bug #371861

  22 Jun 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> pango-1.28.4.ebuild:
  x86 stable wrt security bug #371320

  05 Jun 2011; Pacho Ramos <pacho@gentoo.org> pango-1.28.4.ebuild:
  Versions older than 2.63:2.5 won't neither work.

  05 Jun 2011; Pacho Ramos <pacho@gentoo.org> -pango-1.28.1.ebuild,
  -pango-1.28.3.ebuild, pango-1.28.4.ebuild:
  Block old sys-devel/autoconf versions to prevent upgrade problems like bug
  #368333. Remove old.

  29 Apr 2011; Jeroen Roovers <jer@gentoo.org> pango-1.28.4.ebuild:
  Marked ~hppa (bug #364693).

  24 Apr 2011; Nirbheek Chauhan <nirbheek@gentoo.org> pango-1.28.4.ebuild:
  Drop keywords on hppa/mips w.r.t. KEYWORDREQ bug 364693
