@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/pango
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.329 2011/10/19 01:59:34 tetromino Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.330 2012/01/30 09:45:11 pacho Exp $
+
+  30 Jan 2012; Pacho Ramos <pacho@gentoo.org> pango-1.29.4.ebuild:
+  REQUIRED_USE='doc? ( X )' due upstream bug #643802, move gnome2_src_prepare to
+  proper place.
 
 *pango-1.29.4 (19 Oct 2011)
 
